--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com</groupId>
-	<artifactId>target11</artifactId>
+	<artifactId>payroll-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>payroll-service</name>
 	<description>Service to maintain employee payroll</description>
