added docker support to app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=payroll-service
 server.port=8083
 # MongoDB
-spring.data.mongodb.uri=mongodb://localhost:27018/payrolldb
+spring.data.mongodb.uri=mongodb://mongodb-payroll:27018/payrolldb
